fix bug for url too long

--- a/public/style/map.scss
+++ b/public/style/map.scss
@@ -172,6 +172,7 @@ body {
         }
       }
       .content_text {
+        word-wrap:break-word;
         font-size: 15px;
         width: 80%;
         margin-left: 10%;
